@startuml TemplateMethodForEnemy

' =========================
'  Style
' =========================

skinparam shadowing false
skinparam roundcorner 5
skinparam dpi 150

skinparam DefaultFontName "Inter"
skinparam DefaultFontSize 12
skinparam classAttributeIconSize 0

skinparam class {
  BackgroundColor #F9F9F9
  BorderColor #BFBFBF
  FontColor #333333
}

skinparam Arrow {
  Color #9E9E9E
  Thickness 1
}

hide circle
hide empty members

' =========================
'  Classes
' =========================

class Entity <<Interface>> {

}

class AbstractEntity {
    +updatePosition(deltaTime : double) : void
    {abstract} +alterDirection() : Vector2dc
}

class CloseRangeEnemy { 
    +alterDirection() : Vector2dc
}
class RangedEnemy {
    +alterDirection() : Vector2dc
}
class RoamingEnemy {
    +alterDirection() : Vector2dc
}

' =========================
'  Relations
' =========================
AbstractEntity -up-|> Entity 

CloseRangeEnemy -up-|> AbstractEntity
RangedEnemy -up-|> AbstractEntity
RoamingEnemy -up-|> AbstractEntity

@enduml
